# martijn-msc-thesis

./: .hgignore  ProjectHome.md  README.md
code/: CMakeLists.txt  README.txt
code/apps/: CMakeLists.txt  carveviewer.cpp  featureviewer.cpp  octreegraphcut.cpp  sfmcarver.cpp  sfmviewer.cpp  test.cpp  webcamviewer.cpp
code/features/: feature_sequence.cpp  feature_sequence.hpp  keypoint_tracker.cpp  keypoint_tracker.hpp
code/io/: sequence_capture.cpp  sequence_capture.hpp  sequencecapture_tester.cpp  sfm_reader.cpp  sfm_reader.hpp
code/maxflow/: graph.h
code/objects/: feature_sequence.cpp  feature_sequence.hpp  interest_point.hpp  listhelpers.cpp  occupancy_grid.cpp  occupancy_grid.hpp
code/scripts/: multi_sfmcarver.py
doc/: Makefile  abstract.tex  abstract_page.tex  app_datasets.tex  app_install.tex  app_usage.tex  background.tex  codelisting.tex  conclusion.tex  fullcitations.tex  implementation.tex  introduction.tex  library.bib  logbook.txt  method.tex  mscthesis.bib  presentation.tex  reportmsc.tex  results.tex  ucl_thesis.cls  urls.txt
org/: ProjectRegistrationForm.txt
