# introduction for pcl: http://www.pointclouds.org/documentation/tutorials/using_pcl_pcl_config.php#using-pcl-pcl-config
cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(VISIBILITY_CARVING)
set(CMAKE_BUILD_TYPE Debug)
find_package(PCL 1.3 REQUIRED COMPONENTS common io filters)
find_package(OpenCV 2.3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(webcamviewer ../apps/webcamviewer.cpp)
add_executable(featureviewer ../apps/featureviewer.cpp ../io/sequence_capture.cpp ../features/feature_sequence.cpp ../features/keypoint_tracker.cpp)
target_link_libraries(webcamviewer  ${OpenCV_LIBS})
target_link_libraries(featureviewer ${OpenCV_LIBS} ${PCL_LIBRARIES})
