# introduction for pcl: http://www.pointclouds.org/documentation/tutorials/using_pcl_pcl_config.php#using-pcl-pcl-config
cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(VISIBILITY_CARVING)
set(CMAKE_BUILD_TYPE Debug)
find_package(PCL 1.3 REQUIRED)
find_package(OpenCV 2.3 REQUIRED)
find_package(octomap REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
include_directories(${OCTOMAP_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
link_directories(${OCTOMAP_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")
add_executable(webcamviewer ../apps/webcamviewer.cpp)
add_executable(featureviewer ../apps/featureviewer.cpp ../io/sequence_capture.cpp ../features/feature_sequence.cpp ../features/keypoint_tracker.cpp)
add_executable(sfmviewer ../apps/sfmviewer.cpp ../io/sfm_reader.cpp ../io/sequence_capture.cpp)
add_executable(sfmcarver ../apps/sfmcarver.cpp ../io/sfm_reader.cpp ../io/sequence_capture.cpp ../objects/occupancy_grid.cpp ../objects/listhelpers.cpp ../maxflow/graph.cpp ../maxflow/maxflow.cpp)
add_executable(octreegraphcut ../apps/octreegraphcut.cpp ../io/sfm_reader.cpp ../io/sequence_capture.cpp ../objects/occupancy_grid.cpp ../objects/listhelpers.cpp ../maxflow/graph.cpp ../maxflow/maxflow.cpp)
add_executable(carveviewer ../apps/carveviewer.cpp ../io/sfm_reader.cpp ../io/sequence_capture.cpp ../objects/occupancy_grid.cpp ../objects/listhelpers.cpp ../maxflow/graph.cpp ../maxflow/maxflow.cpp)
target_link_libraries(webcamviewer  ${OpenCV_LIBS})
target_link_libraries(featureviewer ${OpenCV_LIBS})
target_link_libraries(sfmviewer ${OpenCV_LIBS} ${PCL_LIBRARIES})
target_link_libraries(sfmcarver ${OpenCV_LIBS} ${PCL_LIBRARIES} ${OCTOMAP_LIBRARIES})
target_link_libraries(octreegraphcut ${OpenCV_LIBS} ${PCL_LIBRARIES} ${OCTOMAP_LIBRARIES})
target_link_libraries(carveviewer ${OpenCV_LIBS} ${PCL_LIBRARIES} ${OCTOMAP_LIBRARIES})
